[package]
name = "ash-raytracing-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.33.0"
png = "0.16.8"
bytemuck = "1.7.2"
rand = "0.8.4"
glam = "0.17.0"
ash-raytracing-example-shader = { path = "../ash-raytracing-example-shader" }

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }
